# mediumCollection

./: CMakeLists.txt  a.out  description.txt  main.cpp  main_test.cpp
include/: Solution.h
tests/: CMakeLists.txt  main_test.cpp
